--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ chrono = "0.4"
 chrono-tz = "0.8"
 chronoutil = "0.2"
 cron-parser = "0.8"
+serde = { version = "1.0.114", features = ["derive"] }
+serde_json = "1.0.55"
