--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "PicolePixelBot"
+name = "picole_pixel_bot"
 version = "0.1.0"
+authors = ["Rémi Heredero <remi@heredero.ch>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 log = "0.4"
